tasks on user dashboard

--- a/app/views/projects/_my.html.haml
+++ b/app/views/projects/_my.html.haml
@@ -2,10 +2,7 @@
 .projects
   - user.my_projects_with_roles.each do |role|
     .project{:class => (@project && @project == role.project) ? "current": ""}
-      = link_to role.project.to_s(), role.project
-
-%h1 My Tasks
-.projects
-  = link_to "By Me", "#"
-  %br
-  = link_to "For Me", "#"       
+      = link_to role.project.to_s(), role.project   
+      
+%br
+= link_to "Create New Project", new_project_path        
