--- a/app/views/assets/index.html.haml
+++ b/app/views/assets/index.html.haml
@@ -3,62 +3,61 @@
     = render :partial => "projects/my", :locals => {:user => current_user}
     
 - form_tag '/assets', :method => :get do
-  #content_80
-    - if @assets.empty?
-      %b
-        No files yet in this project !
-    - else
-      %table.chapter_table
-        %tr.header
-          %th
-          %th
-            = sort_link 'Name', :orig_name
-          %th
-            = sort_link 'Version', :version  
-          %th
-            = sort_link 'Size', :data_file_size
-          %th
-            = sort_link 'Content Type', :data_content_type  
-          %th
-            = sort_link 'Last Modified', :updated_at
-          %th
-            = sort_link 'Modified By', :updated_by
-          %th
-            = sort_link 'Checked Out On', :checkout_on
-          %th
-            = sort_link 'Checked Out By', :checkout_by
-          %th{:align => "center", :colspan => "4"}
-            Actions          
-        - @assets.each do |asset|
-          %tr{ :class => cycle(:odd, :even) }
-            %td
-              = image_tag('file.png')
-            %td
-              = truncate(asset.orig_name, :length => 15, :omission => "...")
-            %td
-              = asset.version
-            %td
-              = number_to_human_size asset.data_file_size
-            %td
-              = asset.data_content_type
-            %td
-              = to_date_time(asset.updated_at)
-            %td
-              = url_name(asset.updator, "users")
-            %td
-              = to_date_time(asset.checkout_on)
-            %td
-              = url_name(asset.checkoutuser, "users")
-            %td
-              = link_to "Checkout", checkout_project_asset_path(@project, asset)
-            %td
-              = link_to "Checkin", edit_project_asset_path(@project, asset)
-            %td
-              = link_to 'Delete', project_asset_path(@project, asset), :confirm => 'Are you sure?', :method => :delete
-            %td
-              = link_to 'Download', data_project_asset_path(@project, asset)
-        %tr
-        %tr
-        %tr{ :align => "right" }
-          %td{ :colspan => "5" }
-            = will_paginate @assets
+  - if @assets.empty?
+    %b
+      No files yet in this project !
+  - else
+    %table.index
+      %tr.header
+        %th
+        %th
+          = sort_link 'Name', :orig_name
+        %th
+          = sort_link 'Version', :version  
+        %th
+          = sort_link 'Size', :data_file_size
+        %th
+          = sort_link 'Content Type', :data_content_type  
+        %th
+          = sort_link 'Last Modified', :updated_at
+        %th
+          = sort_link 'Modified By', :updated_by
+        %th
+          = sort_link 'Checked Out On', :checkout_on
+        %th
+          = sort_link 'Checked Out By', :checkout_by
+        %th{:align => "center", :colspan => "4"}
+          Actions          
+      - @assets.each do |asset|
+        %tr{ :class => cycle(:odd, :even) }
+          %td
+            = image_tag('file.png')
+          %td
+            = truncate(asset.orig_name, :length => 15, :omission => "...")
+          %td
+            = asset.version
+          %td
+            = number_to_human_size asset.data_file_size
+          %td
+            = asset.data_content_type
+          %td
+            = to_date_time(asset.updated_at)
+          %td
+            = url_name(asset.updator, "users")
+          %td
+            = to_date_time(asset.checkout_on)
+          %td
+            = url_name(asset.checkoutuser, "users")
+          %td
+            = link_to "Checkout", checkout_project_asset_path(@project, asset)
+          %td
+            = link_to "Checkin", edit_project_asset_path(@project, asset)
+          %td
+            = link_to 'Delete', project_asset_path(@project, asset), :confirm => 'Are you sure?', :method => :delete
+          %td
+            = link_to 'Download', data_project_asset_path(@project, asset)
+      %tr
+      %tr
+      %tr{ :align => "right" }
+        %td{ :colspan => "5" }
+          = will_paginate @assets
