--- a/app/views/assets/index.html.haml
+++ b/app/views/assets/index.html.haml
@@ -10,10 +10,7 @@
     %table.index
       %tr.header
         %th
-        %th
           = sort_link 'Name', :orig_name
-        %th
-          = sort_link 'Version', :version  
         %th
           = sort_link 'Size', :data_file_size
         %th
@@ -23,19 +20,10 @@
         %th
           = sort_link 'Modified By', :updated_by
         %th
-          = sort_link 'Checked Out On', :checkout_on
-        %th
-          = sort_link 'Checked Out By', :checkout_by
-        %th{:align => "center", :colspan => "4"}
-          Actions          
       - @assets.each do |asset|
         %tr{ :class => cycle(:odd, :even) }
           %td
-            = image_tag('file.png')
-          %td
-            = truncate(asset.orig_name, :length => 15, :omission => "...")
-          %td
-            = asset.version
+            = link_to truncate(asset.to_s, :length => 15, :omission => "..."), data_project_asset_path(@project, asset)
           %td
             = number_to_human_size asset.data_file_size
           %td
@@ -45,17 +33,7 @@
           %td
             = url_name(asset.updator, "users")
           %td
-            = to_date_time(asset.checkout_on)
-          %td
-            = url_name(asset.checkoutuser, "users")
-          %td
-            = link_to "Checkout", checkout_project_asset_path(@project, asset)
-          %td
-            = link_to "Checkin", edit_project_asset_path(@project, asset)
-          %td
-            = link_to 'Delete', project_asset_path(@project, asset), :confirm => 'Are you sure?', :method => :delete
-          %td
-            = link_to 'Download', data_project_asset_path(@project, asset)
+            = link_to image_tag('delete.png'), [@project, asset], :method => :delete
       %tr
       %tr
       %tr{ :align => "right" }
