--- a/app/views/assets/index.html.haml
+++ b/app/views/assets/index.html.haml
@@ -1,6 +1,7 @@
 - if logged_in?
   - content_for :sidebar do
-    = render :partial => "projects/my", :locals => {:user => current_user}
+    %h1 Add File
+    = render :partial => "new"
     
 - form_tag '/assets', :method => :get do
   - if @assets.empty?
@@ -23,17 +24,18 @@
       - @assets.each do |asset|
         %tr{ :class => cycle(:odd, :even) }
           %td
-            = link_to truncate(asset.to_s, :length => 15, :omission => "..."), data_project_asset_path(@project, asset)
+            = link_to truncate(asset.to_s, :length => 15, :omission => "..."), data_project_asset_path(@project, asset), :popup => :true
           %td
             = number_to_human_size asset.data_file_size
           %td
             = asset.data_content_type
           %td
-            = to_date_time(asset.updated_at)
+            = time_ago_in_words(asset.updated_at)
+            ago
           %td
             = url_name(asset.updator, "users")
           %td
-            = link_to image_tag('delete.png'), [@project, asset], :method => :delete
+            = link_to image_tag('delete.png'), [@project, asset], :method => :delete, :confirm => 'Are you sure?'
       %tr
       %tr
       %tr{ :align => "right" }
