--- a/public/stylesheets/sass/_formtastic.sass
+++ b/public/stylesheets/sass/_formtastic.sass
@@ -30,5 +30,7 @@ form.formtastic
       :margin 0
   &.stack
     +stack-form(100%, 92%)
+    .buttons
+      padding-left: 0
     li.boolean label
       :padding-left 0
