--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,13 +17,12 @@
         = render :partial => "layouts/top_bar"
       	  
       #sidebar.left
-        = image_tag('logo.png')
-        .home{:class => (request.request_uri == root_path || (current_user && request.request_uri == polymorphic_path(current_user))) ? "current" : nil}
-          = link_to "Homepage", root_path
+        = render :partial => "layouts/logo_box"
         = yield(:sidebar)
         
       #content.right
         = render :partial => "layouts/header"
         = yield
+        
       .clear
       = render :partial => "layouts/old_browser"
