--- a/app/views/wiki_pages/_form.html.haml
+++ b/app/views/wiki_pages/_form.html.haml
@@ -2,10 +2,13 @@
   wmd_options = {
     output: "Markdown"
   }
+  $(document).ready(function() {
+    $('.formtastic.wiki_page').labelsWithinFields()
+  })
 
 = javascript_include_tag "wmd/wmd"
 
-- semantic_form_for [@project, @wiki_page] do |f|
+- semantic_form_for [@project, @wiki_page], :html => {:class => "stack"} do |f|
   - f.inputs do
     = f.text_field :title
     = f.text_area :content, :rows => 70, :cols => 500
