--- a/public/stylesheets/sass/_default.sass
+++ b/public/stylesheets/sass/_default.sass
@@ -19,17 +19,15 @@ body
 h1, h2, h3, h4, h5, h6
   font-weight: normal
   color: #111
+  margin: 0.2em 0em
 h1
   font-size: 2em
   line-height: 1
-  margin-bottom: 0.5em
 h2
   font-size: 1.5em
-  margin-bottom: 0.75em
 h3
   font-size: 1em
   line-height: 1
-  margin-bottom: 1em
 
 #flash_messages
   .flash
