--- a/app/views/calendars/index.html.haml
+++ b/app/views/calendars/index.html.haml
@@ -6,7 +6,4 @@
       = link_to image_tag('delete.png'), [@calendarable, calendar], :method => :delete
 
 %h2 Create new
-- semantic_form_for [@calendarable, @calendarable.calendars.new], :html => {:class => "stack"} do |f|
-  - f.inputs do
-    = f.input :url
-  = f.buttons
+= render :partial => "form", :locals => {:calendar => @calendarable.calendars.new }
