--- a/public/stylesheets/sass/_comments.sass
+++ b/public/stylesheets/sass/_comments.sass
@@ -23,3 +23,7 @@
     height: 90px
   fieldset.buttons
     padding: 0
+  form#new_comment.loading
+    li.commit
+      padding-right: 25px
+      background: url("../images/spinner.gif") right center no-repeat
