--- a/app/views/assets/index.html.haml
+++ b/app/views/assets/index.html.haml
@@ -24,7 +24,7 @@
       - @assets.each do |asset|
         %tr{ :class => cycle(:odd, :even) }
           %td
-            = link_to truncate(asset.to_s, :length => 15, :omission => "..."), data_project_asset_path(@project, asset), :popup => :true
+            = link_to truncate(asset.to_s, :length => 15, :omission => "..."), project_asset_path(@project, asset), :popup => :true
           %td
             = number_to_human_size asset.data_file_size
           %td
