--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -1,3 +1,7 @@
+:javascript
+  $(document).ready(function() {
+    $('.edit_event_link').colorbox({width: '50%', initialHeight: '50%'})
+  })
 
 %h1
   = @event
@@ -22,7 +26,7 @@ Event from
     Repeat every
     = @event.repeat_frequency
 
-= link_to "Edit Event", [:edit, @calendarable, @event], :class => :colorbox
+= link_to "Edit Event", [:edit, @calendarable, @event], :class => :edit_event_link
 |
 = link_to "Delete Event", [@calendarable, @event], :method => :delete
 - if @event.recurring?
