--- a/app/views/comments/_form.html.haml
+++ b/app/views/comments/_form.html.haml
@@ -1,4 +1,4 @@
-- semantic_form_for comment do |f|
+- semantic_form_for [@calendarable, comment] do |f|
   = error_messages_for :comment
   = f.hidden_field :commentable_id
   = f.hidden_field :commentable_type
