--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -33,7 +33,7 @@ Event from
   |
   = link_to "Delete All Events", {:remove_series => true}, :method => :delete
   
-%h2
+%h2.gray
   Comments
 #comments
   = render @event.comments
