--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,7 +11,7 @@
     #container
       #header
         = render :partial => "layouts/top_bar"
-      	  
+      = render :partial => "layouts/pagecontext"
       #sidebar.left
         = render :partial => "layouts/logo_box"
         = yield(:sidebar)
