--- a/app/views/articles/_form.html.haml
+++ b/app/views/articles/_form.html.haml
@@ -5,9 +5,10 @@
     = f.input :citation_source
     = f.input :citation_author
     = f.input :citation_date
-    = f.input :content
+    = f.input :content, :input_html => {:rows => 12}
     - f.inputs :for => [:assets, article.assets.build] do |af|
       = af.input :data, :as => :file, :label => "Add Attachment", :input_html => {:size => 20}
     = f.input :tag_list
     
-  = f.buttons
+  - f.buttons do
+    = f.commit_button "Create"
