--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -3,18 +3,16 @@
     = content_tag :div, msg, :class => "flash #{name}" if msg.is_a?(String)
         
 - if @project && !@project.new_record?
-  %h1
+  %span.lightgray.right
+    Project 
     = @project
-  
+  %br
   .menu
-    - [["Dashboard", "projects", nil], ["Calendar", "events", :events], ["CoEdit", "wiki_pages", :wiki_pages], ["Research Feeds", "articles", :articles], ["Tasks", "tasks", :tasks], ["Files", "assets", :assets]].each do |link_name, link_controller, link_path|
+    - [["Project Dashboard", "projects", nil], ["Calendar", "events", :events], ["CoEdit", "wiki_pages", :wiki_pages], ["Research Feeds", "articles", :articles], ["Tasks", "tasks", :tasks], ["Files", "assets", :assets], ["Timesheets", "timesheets", :timesheets]].each do |link_name, link_controller, link_path|
       = link_to link_name, [@project, link_path], :class => (controller_name == link_controller) ? "current" : nil
 
-- elsif @user && !@user.new_record?
-  %h1
-    = @user
-  
+- elsif @user && !@user.new_record? 
   .menu
-    - [["Dashboard", "users", nil], ["Calendar", "events", :events]].each do |link_name, link_controller, link_path|
+    - [["Homepage", "users", nil], ["Calendar", "events", :events]].each do |link_name, link_controller, link_path|
       = link_to link_name, [User.find(@user.id), link_path], :class => (controller_name == link_controller) ? "current" : nil
 %br
