--- a/app/views/layouts/onebox_layout.html.haml
+++ b/app/views/layouts/onebox_layout.html.haml
@@ -14,6 +14,5 @@
     #container
       #header
         = render :partial => "layouts/top_bar"
-      
-      = yield  
-      
+      = render :partial => "layouts/pagecontext"
+      = yield 
