--- a/app/views/tasks/edit.html.haml
+++ b/app/views/tasks/edit.html.haml
@@ -1,5 +1,3 @@
-= render :partial => "projects/list", :locals => {:user => current_user}
-
 :javascript
   $('document').ready(function(){
     $('.date_picker').datepicker({
@@ -8,56 +6,45 @@
     });
   });
 
-#main_form
-  %table
-    %tr	
-      - semantic_form_for [@project, @task] do |f|
-        %td
-          = flash[:errors]
-          Creator:
-          = @task.initiator.to_s
-          %br
-          Created:
-          = to_date(@task.created_at)
-          %br
-          %br  
-          Assigned To:
-          %br
-          = f.collection_select :assign_to, @project.users, :id, :to_s, :prompt => 'Assigned to'
-          %br
-          %br  
-          Due By:
-          %br
-          = f.text_field :due_date, :class => "date_picker", :size => '15'
-          %br
-          %br
-          Priority:
-          %br
-          = f.collection_select :priority, Task::PRIORITIES, :id, :display_value
-          %br
-          %br
-            = f.submit "Update Task", :class => "but"
-        %td         
-          %div{:style => "width:3px;height:400px;background-color:#EEEEEE;"}
-        %td
-          &nbsp;&nbsp;Name
-          = f.text_field :name, :size => 100
-          %br
-          %br        
-          &nbsp;&nbsp;Description: 
-          %br
-            &nbsp;
-            = f.text_area :description, :rows => 15, :cols => 92
-
-%h2.left Comments
-.right
-  = link_to "Hide Task Details", "#", :id => :hide_main_form
-  = link_to "Show Task Details", "#", :id => :show_main_form
-.clear  
-#comments
-  = render @task.comments      
-
-- if logged_in?
-  #new_comment_form
-    %h2 Add new Comment
-    = render :partial => "comments/form", :locals => {:comment => @task.comments.new}
+#sidebar.left
+  - semantic_form_for [@project, @task] do |f|
+    = render :partial => "layouts/logo_box"
+    %h1 Task Properties
+    .gray
+      Task created by 
+      = @task.initiator.to_s
+      %br
+      at 
+      = to_date(@task.created_at)
+    %br  
+    Assigned To:
+    %br
+    = f.collection_select :assign_to, @project.users, :id, :to_s, :prompt => 'Assigned to'
+    %br
+    %br  
+    Due By:
+    %br
+    = f.text_field :due_date, :class => "date_picker", :size => '15'
+    %br
+    %br
+    Priority:
+    %br
+    = f.collection_select :priority, Task::PRIORITIES, :id, :display_value
+    %br
+    %br
+    = f.submit "Update Task", :class => "but"
+  
+#content.right
+  = render :partial => "layouts/header"
+  = flash[:errors]
+  %br
+  %h2
+    = @task.name
+  %h2.left.gray Discussion
+  .clear    
+  #comments
+    = render @task.comments
+    - if logged_in?
+      #new_comment_form
+        #comment_errors
+        = render :partial => "comments/form", :locals => {:comment => @task.comments.new}
