--- a/app/views/tasks/index.html.haml
+++ b/app/views/tasks/index.html.haml
@@ -1,19 +1,21 @@
 - form_tag project_tasks_path, :method => :get do
   #sidebar.left
     = render :partial => "layouts/logo_box"
-    %h1 Tasks List
-    = link_to "New Task", new_project_task_path
+    %h1 Filter Tasks
     = filter_html("tasks_index")
   
   #content.right
     = render :partial => "layouts/header"
-          
+    %br      
     %table.index
       %tr
         %td.top
           %center
             = text_field_tag "search", params[:search], :size => 60, :autocomplete => "off"
             = submit_tag "Search"
+            &nbsp;&nbsp;
+            = link_to "New Task", new_project_task_path
+          %br
           %br
           - if @tasks.empty?
             %b
@@ -37,16 +39,16 @@
                 %tr{ :class => cycle(:odd, :even) }
                   %td
                     = image_tag(task.priority_image)
-                  %td.min200.left
+                  %td.min350.left
                     - if task.deleted_at?
                       %del
-                        = link_to truncate(task.to_s, :omission => "...", :length => 25), edit_project_task_path(task.project, task)
+                        = link_to truncate(task.to_s, 45, "..."), edit_project_task_path(task.project, task)
                     - else
-                      = link_to truncate(task.to_s, :omission => "...", :length => 25), edit_project_task_path(task.project, task)
+                      = link_to truncate(task.to_s, 45, "..."), edit_project_task_path(task.project, task)
                   %td
-                    = task.initiator
+                    = truncate(task.initiator.to_s(), 25, "...")
                   %td
-                    = task.assignee
+                    = truncate(task.assignee.to_s(), 25, "...")
                   %td
                     = time_ago_in_words(task.updated_at)
                     ago
