--- a/app/views/wiki_pages/_versions.html.haml
+++ b/app/views/wiki_pages/_versions.html.haml
@@ -22,21 +22,20 @@
 - @changes_from ||= @wiki_page.versions.count
 - @changes_to ||= @wiki_page.versions.count + 1
 
-- form_tag diff_project_wiki_page_path(@project, @wiki_page), :method => :get do
-  %p
-    = check_box_tag "versions[]", 1, (@changes_from == 1 || @changes_to == 1)
-    - if @wiki_page.creator
-      = link_to @wiki_page.creator, polymorphic_path([@wiki_page.project, @wiki_page], :version => 1)
-      = time_ago_in_words @wiki_page.created_at
-      ago
-  
-  - @wiki_page.versions.each do |version|
+- form_tag diff_project_wiki_page_path(@project, @wiki_page), :method => :get do  
+  - @wiki_page.versions_desc.each do |version|
     %p
       = check_box_tag "versions[]", version.number, (@changes_from == version.number || @changes_to == version.number)
       - if version.user
-        = link_to version.user, polymorphic_path([@wiki_page.project, @wiki_page], :version => version.number)
-        = time_ago_in_words version.created_at
-        ago
+        = link_to time_ago_in_words(version.created_at), polymorphic_path([@wiki_page.project, @wiki_page], :version => version.number)
+        %span.gray
+          = version.user
+  %p
+    = check_box_tag "versions[]", 1, (@changes_from == 1 || @changes_to == 1)
+    - if @wiki_page.creator
+      = link_to time_ago_in_words(@wiki_page.created_at), polymorphic_path([@wiki_page.project, @wiki_page], :version => 1)
+      %span.gray
+        = @wiki_page.creator
   %br
   %p
-    = submit_tag "View Differences", :id => "submit_diff"
+    = submit_tag "Compare", :id => "submit_diff"
