--- a/app/views/assets/_new.html.haml
+++ b/app/views/assets/_new.html.haml
@@ -9,3 +9,8 @@
         = a.input :data, :as => :file, :label => false, :input_html => {:size => 20}
   %br      
   = f.submit "Upload"
+%br
+%span.gray
+  Max size 10 MB per file.
+  %br
+  Executable files not allowed.
