--- a/app/views/events/_upcoming.html.haml
+++ b/app/views/events/_upcoming.html.haml
@@ -1,6 +1,6 @@
-%h2
+.gray
   Upcoming Events
-  
+%br  
 %table.ec-row-table
   %tr
     - (Time.now.to_date..(Time.now+5.days).to_date).each_with_index do |date, i|
