--- a/app/views/projects/show.html.haml
+++ b/app/views/projects/show.html.haml
@@ -1,36 +1,23 @@
-= render :partial => "projects/list", :locals => {:user => current_user}
-
-%p
-  Status:
-  = @project.status_val
-%p
-  Project is:
-  = @project.is_public? ? "public" : "private"
-
-%br
-  
-%h3 
-  %b
-    Objectives:
-=h @project.objectives
-
-%br
-%br
-  
-%h3
-  %b
-    Description:
-= h @project.description
-
-%br 
-%br
-
-%p 
-  = link_to 'Edit', edit_project_path(@project)
-  |
-  = link_to 'Project Members', [@project, :project_roles]
-
-%br 
+- content_for :sidebar do
+  .right
+    = link_to 'Edit', edit_project_path(@project)
+  %h1
+    Project Details
+  .gray
+    = @project.status_val
+    Project  
+    %br  
+    %br  
+    = @project.description
 
 = render :partial => "events/upcoming", :locals => {:events => @project.events}
-
+%br
+.gray
+  Top 10 Alerts
+%br
+= render :partial => "alerts/list"
+%br
+.gray
+  My top 10 tasks
+= render :partial => "tasks/my"
+%br 
