--- a/app/views/assets/index.html.haml
+++ b/app/views/assets/index.html.haml
@@ -15,25 +15,25 @@
         %th
           = sort_link 'Size', :data_file_size
         %th
-          = sort_link 'Content Type', :data_content_type  
-        %th
           = sort_link 'Last Modified', :updated_at
         %th
           = sort_link 'Modified By', :updated_by
         %th
       - @assets.each do |asset|
         %tr{ :class => cycle(:odd, :even) }
-          %td
-            = link_to truncate(asset.to_s, :length => 15, :omission => "..."), project_asset_path(@project, asset), :popup => :true
-          %td
+          %td.min500
+            - if asset.image?
+              = image_tag(asset.url, :size => "30x30")
+            - else
+              = image_tag(asset.file_icon, :size => "30x30")
+            = link_to truncate(asset.to_s, :length => 50, :omission => "..."), project_asset_path(@project, asset), :popup => :true
+          %td.gray
             = number_to_human_size asset.data_file_size
-          %td
-            = asset.data_content_type
-          %td
+          %td.gray
             = time_ago_in_words(asset.updated_at)
             ago
-          %td
-            = url_name(asset.updator, "users")
+          %td.gray
+            = asset.updator
           %td
             = link_to image_tag('delete.png'), [@project, asset], :method => :delete, :confirm => 'Are you sure?'
       %tr
