--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -3,12 +3,13 @@
     = content_tag :div, msg, :class => "flash #{name}" if msg.is_a?(String)
         
 - if @project && !@project.new_record?
-  %span.lightgray.right
-    Project 
-    = @project
+  %center
+    %h2.gray
+      Project 
+      = @project
   %br
   .menu
-    - [["Project Dashboard", "projects", nil], ["Calendar", "events", :events], ["CoEdit", "wiki_pages", :wiki_pages], ["Research Feeds", "articles", :articles], ["Tasks", "tasks", :tasks], ["Files", "assets", :assets], ["Timesheets", "timesheets", :timesheets]].each do |link_name, link_controller, link_path|
+    - [["Project Dashboard", "projects", nil], ["Calendar", "events", :events], ["CoEdit", "wiki_pages", :wiki_pages], ["Research Feeds", "articles", :articles], ["Tasks", "tasks", :tasks], ["Files", "assets", :assets], ["Timesheets", "timesheets", :timesheets], ["Alerts", "alerts", :alerts] ,["Members", "project_roles", :project_roles]].each do |link_name, link_controller, link_path|
       = link_to link_name, [@project, link_path], :class => (controller_name == link_controller) ? "current" : nil
 
 - elsif @user && !@user.new_record? 
