--- a/app/views/timesheets/index.html.haml
+++ b/app/views/timesheets/index.html.haml
@@ -1,27 +1,51 @@
+:javascript
+  $(document).ready(function() {
+    $('.timesheet_expand_logs').live("click", function() {
+      var timelogs = $(this).closest('.timesheet').find('.timelogs');
+      timelogs.toggle();
+      $(this).html(timelogs.css('display') == "none" ? "(+)" : "(-)");
+      
+      return false;
+    })
+    
+    $('#timesheets_filter_form input[name="user_ids[]"]').change(function() {
+      var form = $(this).closest('form');
+      var count_checked = form.find('[name="user_ids[]"]:checked').size();
+      if (count_checked > 0) {
+        form.find('[name="user_ids[]"]:not(:checked)').attr("disabled", "disabled");
+      } else {
+        form.find('[name="user_ids[]"]').removeAttr("disabled");
+      }
+    })
+    
+    $('#new_timelog').labelsWithinFields();
+    $('#timesheets_filter_form').submitWithAjax();
+    $('#timesheets_filter_form input[name="users[]"]').change();
+  })
+
 - content_for :sidebar do
-  %h1 Coedit new doc
+  %h1 Filter
+  - form_tag [@project, :timesheets], :method => :get, :id => :timesheets_filter_form do
+    %p
+      = label_tag :date_from, "From Date", :style => "display:block; float:left; width: 80px"
+      = text_field_tag :date_from, nil, :class => :datepicker
+    %p
+      = label_tag :date_to, "To Date", :style => "display:block; float:left; width: 80px"
+      = text_field_tag :date_to, nil, :class => :datepicker
+    
+    %h2 For members:
+    - @project.roles.each do |role|
+      %p
+        %label
+          = check_box_tag "user_ids[]", role.user_id
+          = role.user
+    %br
+    %p
+      = submit_tag "Apply Filter"
 
-<h1>Listing timesheets</h1>
 
-<table>
-  <tr>
-    <th>User</th>
-    <th>Project</th>
-    <th>Description</th>
-  </tr>
+= render :partial => "timelogs/form", :locals => {:timelog => Timelog.new}
 
-<% @timesheets.each do |timesheet| %>
-  <tr>
-    <td><%=h timesheet.user_id %></td>
-    <td><%=h timesheet.project_id %></td>
-    <td><%=h timesheet.description %></td>
-    <td><%= link_to 'Show', timesheet %></td>
-    <td><%= link_to 'Edit', edit_timesheet_path(timesheet) %></td>
-    <td><%= link_to 'Destroy', timesheet, :confirm => 'Are you sure?', :method => :delete %></td>
-  </tr>
-<% end %>
-</table>
 
-<br />
-
-<%= link_to 'New timesheet', new_project_timesheet_path %>
+#timesheets
+  = render @timesheets.all
