--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -325,6 +325,26 @@ form.formtastic.stack .buttons {
   padding-left: 0; }
 form.formtastic.stack li.boolean label {
   padding-left: 0; }
+form.formtastic.inline fieldset {
+  width: auto; }
+  form.formtastic.inline fieldset.inputs {
+    float: left; }
+    form.formtastic.inline fieldset.inputs label {
+      width: auto; }
+    form.formtastic.inline fieldset.inputs input[type=text] {
+      width: auto; }
+    form.formtastic.inline fieldset.inputs li {
+      float: left;
+      margin-right: 10px; }
+  form.formtastic.inline fieldset.buttons {
+    display: inline;
+    padding: 0; }
+    form.formtastic.inline fieldset.buttons li {
+      margin-right: 10px; }
+form.formtastic.inline label.error {
+  margin: 0;
+  float: none;
+  width: auto; }
 
 html, body {
   margin: 0;
@@ -358,14 +378,34 @@ h3 {
 .gray {
   color: gray; }
 
+span.lightgray {
+  color: #CCCCC8; }
+
 span.bottom {
   vertical-align: text-bottom; }
 
+span.filetag {
+  padding: 0px 21px 0px 2px;
+  background-color: #F5F5DC;
+  color: #454542; }
+
+span.tasktag {
+  padding: 0px 15px 0px 2px;
+  background-color: #EBE1E2;
+  color: #757575; }
+
+span.feedtag {
+  padding: 0px 14px 0px 2px;
+  background-color: #DEDEE0;
+  color: #757575; }
+
+span.coedittag {
+  padding: 0px 3px 0px 2px;
+  background-color: #E1EBE2;
+  color: #757575; }
+
 span.gray {
   color: gray; }
-
-span.lightgray {
-  color: #D4D6D5; }
 
 #flash_messages .flash {
   padding: 5px 8px;
@@ -412,14 +452,15 @@ span.lightgray {
     font-size: 0.9em;
     text-decoration: none; }
   #header a.orange {
-    background-color: #357328;
-    color: white;
-    box-shadow: 0px 0px 5px #27272B;
-    -moz-box-shadow: 0px 0px 5px #27272B;
-    -webkit-box-shadow: 0px 0px 5px #27272B;
+    background-color: #FFFFE3;
+    color: #8A8A81;
+    box-shadow: 0px 0px 5px #C9C873;
+    -moz-box-shadow: 0px 0px 5px #C9C873;
+    -webkit-box-shadow: 0px 0px 5px #C9C873;
     border-radius: 2px;
     -moz-border-radius: 2px;
-    -webkit-border-radius: 2px; }
+    -webkit-border-radius: 2px;
+    font-size: 1em; }
 
 #sidebar {
   width: 20%; }
@@ -461,19 +502,13 @@ span.lightgray {
   width: 76%;
   float: right;
   padding: 10px 2%;
-  background-color: #fff;
+  background-color: white;
   box-shadow: 0px 0px 6px #A8A6A0;
   -moz-box-shadow: 0px 0px 6px #A8A6A0;
   -webkit-box-shadow: 0px 0px 6px #A8A6A0;
   border-radius: 4px;
   -moz-border-radius: 4px;
   -webkit-border-radius: 4px; }
-  #content h1 {
-    text-align: center;
-    padding: 10px 30px 10px 30px;
-    background-color: #eee;
-    color: #D97D04;
-    font-style: italic; }
   #content .menu a {
     padding: 2px 10px 2px 10px; }
   #content .menu a.current {
@@ -517,7 +552,7 @@ table.index td, table.index th {
   padding: 5px 10px 0px 5px;
   text-align: left; }
 table.index tr.header {
-  background-color: #FFF5F5;
+  background-color: #EDEDED;
   heigth: 30px;
   color: #221C26; }
 table.index tr.header a:hover {
@@ -527,14 +562,27 @@ table.index tr.header a {
   color: #221C26;
   padding-right: 15px;
   text-decoration: none; }
+table.index td.none {
+  padding: 0px 0px 0px 0px; }
 table.index td.min200 {
   width: 200px; }
+table.index td.min100 {
+  width: 100px; }
 table.index td.min350 {
   width: 350px; }
+table.index td.min400 {
+  width: 400px; }
 table.index td.min600 {
   width: 600px; }
+table.index td.min500 {
+  width: 500px; }
 table.index td.top {
   vertical-align: top; }
+table.index td.min50 {
+  padding-right: 10px; }
+table.index td.members {
+  vertical-align: top;
+  width: 350px; }
 
 .even {
   background-color: #F5FEFF; }
@@ -643,7 +691,12 @@ span.match {
   #search_form #advanced_search input[type=text]#search_citation_date {
     width: 100px; }
 
-#search_form.loading {
+#simple_search input#search {
+  height: 18px;
+  background: url(../images/search.png) no-repeat 2px 2px;
+  padding-left: 20px;
+  border: 1px solid #aaa; }
+#simple_search.loading {
   background: url("../images/spinner.gif") left top no-repeat; }
 
 #attachments .attachment {
@@ -660,3 +713,32 @@ span.match {
 #calendar {
   margin-top: 5px;
   padding-top: 10px; }
+
+#timesheets .timesheet .timesheet-hours {
+  float: left;
+  width: 50px; }
+#timesheets .timesheet .timesheet-user {
+  float: left;
+  width: 150px; }
+#timesheets .timesheet .timesheet-date {
+  float: left;
+  width: 130px;
+  text-align: right; }
+#timesheets .timesheet .timesheet-actions {
+  float: right;
+  margin-left: 20px; }
+#timesheets .timesheet .timelogs .timelog {
+  float: right; }
+  #timesheets .timesheet .timelogs .timelog .timelog-hours {
+    float: left;
+    width: 50px; }
+  #timesheets .timesheet .timelogs .timelog .timelog-date {
+    float: left;
+    width: 280px;
+    text-align: right; }
+  #timesheets .timesheet .timelogs .timelog .timelog-actions {
+    float: right;
+    margin-left: 20px; }
+
+#new_timelog #timelog_timesheet_description {
+  width: 250px; }
