--- a/public/stylesheets/sass/_default.sass
+++ b/public/stylesheets/sass/_default.sass
@@ -35,15 +35,35 @@ h3
 
 .gray
   color: gray
+  
+span.lightgray
+  color: #CCCCC8
 
 span.bottom
   vertical-align: text-bottom
 
+span.filetag
+  padding: 0px 21px 0px 2px
+  background-color: #F5F5DC
+  color: #454542
+  
+span.tasktag
+  padding: 0px 15px 0px 2px
+  background-color: #EBE1E2
+  color: #757575
+  
+span.feedtag
+  padding: 0px 14px 0px 2px
+  background-color: #DEDEE0
+  color: #757575
+  
+span.coedittag
+  padding: 0px 3px 0px 2px
+  background-color: #E1EBE2
+  color: #757575
+
 span.gray
   color: gray
-
-span.lightgray
-  color: #D4D6D5
 
 #flash_messages
   .flash
@@ -88,10 +108,11 @@ span.lightgray
     font-size: 0.9em
     text-decoration: none
   a.orange
-    background-color: #357328
-    color: white
-    +box-shadow("0px 0px 5px #27272B")
+    background-color: #FFFFE3
+    color: #8A8A81
+    +box-shadow("0px 0px 5px #C9C873")
     +border-radius("2px")
+    font-size: 1em
   
 #sidebar
   width: 20%
@@ -134,15 +155,9 @@ span.lightgray
   width: 76%
   float: right
   padding: 10px 2%
-  background-color: #fff
+  background-color: white
   +box-shadow("0px 0px 6px #A8A6A0")
   +border-radius("4px")
-  h1
-    text-align: center
-    padding: 10px 30px 10px 30px
-    background-color: #eee
-    color: #D97D04
-    font-style: italic
   .menu
     a
       padding: 2px 10px 2px 10px
@@ -182,7 +197,7 @@ table.index
     padding: 5px 10px 0px 5px
     text-align: left
   tr.header
-    background-color: #FFF5F5
+    background-color: #EDEDED
     heigth: 30px
     color: #221C26
   tr.header a:hover
@@ -192,18 +207,31 @@ table.index
     color: #221C26
     padding-right: 15px
     text-decoration: none
+  td.none
+    padding: 0px 0px 0px 0px
   
   td.min200
     width: 200px
+  td.min100
+    width: 100px
   td.min350
     width: 350px
+  td.min400
+    width: 400px
   td.min600
     width: 600px
+  td.min500
+    width: 500px
   td.right
     text-align:right
   td.top
+    vertical-align: top  
+  td.min50
+    padding-right: 10px
+  td.members
     vertical-align: top
-  
+    width: 350px
+    
 .even
   background-color: #F5FEFF
 
